--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,11 +12,10 @@
 	
     <nav class="sidebar-nav">
 	  <hr>
-      <a class="sidebar-nav-item" href="https://rdpackages.github.io/rdrobust/">rdrobust</a>
-	  <a class="sidebar-nav-item" href="https://rdpackages.github.io/rdlocrand/">rdlocrand</a>
-      <a class="sidebar-nav-item" href="https://rdpackages.github.io/rddensity/">rddensity</a> 
-	  <a class="sidebar-nav-item" href="https://rdpackages.github.io/rdmulti/">rdmulti</a>
-      <a class="sidebar-nav-item" href="https://rdpackages.github.io/rdpower/">rdpower</a>
+      <a class="sidebar-nav-item" href="https://rdpackages.github.io/nprobust/">nprobust</a>
+	  <a class="sidebar-nav-item" href="https://rdpackages.github.io/lpdensity/">lpdensity</a>
+      <a class="sidebar-nav-item" href="https://rdpackages.github.io/lspartition/">lspartition</a> 
+	  <a class="sidebar-nav-item" href="https://rdpackages.github.io/binsreg/">binsreg</a>
 	  <hr>
       <a class="sidebar-nav-item" href="https://rdpackages.github.io/replication/">Replication</a>
 	  <hr>
