--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,14 +12,14 @@
 	
     <nav class="sidebar-nav">
 	  <hr>
-      <a class="sidebar-nav-item" href="https://rdpackages.github.io/nprobust/">nprobust</a>
-	  <a class="sidebar-nav-item" href="https://rdpackages.github.io/lpdensity/">lpdensity</a>
-      <a class="sidebar-nav-item" href="https://rdpackages.github.io/lspartition/">lspartition</a> 
-	  <a class="sidebar-nav-item" href="https://rdpackages.github.io/binsreg/">binsreg</a>
+      <a class="sidebar-nav-item" href="https://nppackages.github.io/nprobust/">nprobust</a>
+	  <a class="sidebar-nav-item" href="https://nppackages.github.io/lpdensity/">lpdensity</a>
+      <a class="sidebar-nav-item" href="https://nppackages.github.io/lspartition/">lspartition</a> 
+	  <a class="sidebar-nav-item" href="https://nppackages.github.io/binsreg/">binsreg</a>
 	  <hr>
-      <a class="sidebar-nav-item" href="https://rdpackages.github.io/replication/">Replication</a>
+      <a class="sidebar-nav-item" href="https://nppackages.github.io/replication/">Replication</a>
 	  <hr>
-      <a class="sidebar-nav-item" href="https://nppackages.github.io">NP Packages</a>
+      <a class="sidebar-nav-item" href="https://rdpackages.github.io">RD Packages</a>
 	  <hr>
     </nav>
 
