--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body class="theme-base-darkblue">
+  <body class="theme-base-desaturatedred">
 
     {% include sidebar.html %}
 
