--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -249,11 +249,12 @@ a.sidebar-nav-item:focus {
   color: #8f5536;
 }
 
-/* darkblue */
-.theme-base-darkblue .sidebar {
-  background-color: #336699;
+/* desaturatedred */
+.theme-base-desaturatedred .sidebar {
+  background-color: #cc9999;
 }
-.theme-base-darkblue .content a,
-.theme-base-darkblue .related-posts li a:hover {
-  color: #336699;
+.theme-base-desaturatedred .content a,
+.theme-base-desaturatedred .related-posts li a:hover {
+  color: #cc9999;
 }
+
