--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -249,12 +249,12 @@ a.sidebar-nav-item:focus {
   color: #8f5536;
 }
 
-/* desaturatedred */
-.theme-base-desaturatedred .sidebar {
-  background-color: #cc9999;
+/* darkgreen */
+.theme-base-darkgreen .sidebar {
+  background-color: #336633;
 }
-.theme-base-desaturatedred .content a,
-.theme-base-desaturatedred .related-posts li a:hover {
-  color: #cc9999;
+.theme-base-darkgreen .content a,
+.theme-base-darkgreen .related-posts li a:hover {
+  color: #336633;
 }
 
