--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -90,6 +90,7 @@ html {
 .sidebar-nav-item {
   display: block;
   line-height: 1.75;
+  font-size: 2rem;
 }
 a.sidebar-nav-item:hover,
 a.sidebar-nav-item:focus {
