--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,12 +13,14 @@
     <nav class="sidebar-nav">
 	  <hr>
       <a class="sidebar-nav-item" href="https://nppackages.github.io/binsreg/">binsreg</a>
+      <a class="sidebar-nav-item" href="https://nppackages.github.io/lspartition/">lspartition</a>
+      <a class="sidebar-nav-item" href="https://nppackages.github.io/portsort/">portsort</a>
+	  
 	  <a class="sidebar-nav-item" href="https://nppackages.github.io/nprobust/">nprobust</a>
 	  <a class="sidebar-nav-item" href="https://nppackages.github.io/lpdensity/">lpdensity</a>
-<!-- 	  <a class="sidebar-nav-item" href="https://nppackages.github.io/lpconddensity/">lpcondensity</a> -->
-      <a class="sidebar-nav-item" href="https://nppackages.github.io/lspartition/">lspartition</a>
-<!--      <a class="sidebar-nav-item" href="https://nppackages.github.io/scpi/">scpi</a> -->
-<!--      <a class="sidebar-nav-item" href="https://nppackages.github.io/portsort/">portsort</a> -->
+ 	  <a class="sidebar-nav-item" href="https://nppackages.github.io/lpconddensity/">lpcondensity</a>
+      
+	  <a class="sidebar-nav-item" href="https://nppackages.github.io/scpi/">scpi</a>
 	  <hr>
       <a class="sidebar-nav-item" href="https://nppackages.github.io/replication/">Replication</a>
 	  <hr>
