--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,7 +18,7 @@
 	  
 	  <a class="sidebar-nav-item" href="https://nppackages.github.io/nprobust/">nprobust</a>
 	  <a class="sidebar-nav-item" href="https://nppackages.github.io/lpdensity/">lpdensity</a>
- 	  <a class="sidebar-nav-item" href="https://nppackages.github.io/lpconddensity/">lpcondensity</a>
+ 	  <a class="sidebar-nav-item" href="https://nppackages.github.io/lpcde/">lpcde</a>
       
 	  <a class="sidebar-nav-item" href="https://nppackages.github.io/scpi/">scpi</a>
 	  <hr>
