--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@
       <a class="sidebar-nav-item" href="https://nppackages.github.io/lspartition/">lspartition</a>
 	  <br>
 	  <a class="sidebar-nav-item" href="https://nppackages.github.io/nprobust/">nprobust</a>
-	  <a class="sidebar-nav-item" href="https://nppackages.github.io/lpdensity/">lpdensity</a>
+	  <a class="sidebar-nav-item" href="https://nppackages.github.io/lpdensity_doc/">lpdensity</a>
  	  <a class="sidebar-nav-item" href="https://nppackages.github.io/lpcde/">lpcde</a>
       <br>
 	  <a class="sidebar-nav-item" href="https://nppackages.github.io/scpi/">scpi</a>
